ft: microservice gateway set up

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,13 +1,11 @@
-spring.application.name=payment-service
+server.port=9094
 
 #postgres configuration
 spring.datasource.url=jdbc:postgresql://postgres-payment:5433/payment
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
-
-#add this line if routing is failing
-eureka.instance.preferIpAddress=true
 
 #Flyway properties
 spring.flyway.enabled=true
@@ -16,3 +14,6 @@ spring.flyway.password= postgres
 spring.flyway.user= postgres
 spring.flyway.schemas=migrations
 spring.flyway.locations=classpath:db/migration/payment
+
+
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka/
